--- a/f/c/captive-page.css
+++ b/f/c/captive-page.css
@@ -17,15 +17,16 @@
 }
 
 :root{
-  --color-red: #D0112B;
+  --color-main: #194589;
 }
 
 body{
-  background-color: #ede2e2;
+  background-color: #eceded;
 }
 
 .container__captive-page {
   width: 890px;
+  height: 100%;
   /* outline: 2px solid #09e364; */
   margin: 50px auto;
   border-radius: 24px;
@@ -37,7 +38,6 @@ body{
 .captive-page__colums{
   display: grid;
   grid-template-columns: 320px auto;
-  /* column-gap: 136px; */
   align-items: stretch;
   height: 834px;
   background-color: #fff;
@@ -45,9 +45,10 @@ body{
 }
 
 .captive-page__logo {
-  background-color: var(--color-red);
+  background-color: var(--color-main);
   border-radius: 24px 0px 0px 24px;
-  padding: 50px 30px;
+  padding: 50px 0px;
+  text-align: center;
 }
 
 .captive-page__logo p{
@@ -63,7 +64,7 @@ body{
 }
 
 .t-style {
-  max-width: 318px;
+  max-width: 270px;
   color: #000;
   font-family: Circe;
   font-size: 16px;
@@ -129,7 +130,7 @@ body{
 
 .text__buttons input {
   height: 38px;
-  border-radius: 24px;
+  border-radius: 16px;
   margin-bottom: 16px;
   border: 1px solid #000;
   background-color: #fff;
@@ -142,7 +143,7 @@ body{
 
 .register {
   border: none !important;
-  background-color: var(--color-red) !important;
+  background-color: #f37920 !important;
   color: #fff;
 }
 
@@ -169,7 +170,6 @@ body{
   }
   .captive-page__colums{
     grid-template-columns: 278px auto;
-    /* column-gap: 125px; */
     height: 835px;
   }
   .captive-page__logo p{
@@ -195,7 +195,7 @@ body{
   }
   .captive-page__colums{
     grid-template-columns: 294px auto;
-    /* column-gap: 103px; */
+    height: 100%;
   }
   .wrapper__text, .text__buttons, .input-form__col input{
     max-width: 290px;
@@ -208,7 +208,6 @@ body{
   }
   .captive-page__colums{
     grid-template-columns: 208px auto;
-    height: 835px;
   }
   .captive-page__logo p{
     font-size: 20px;
@@ -217,18 +216,40 @@ body{
   .wrapper__text, .text__buttons, .input-form__col input{
     max-width: 266px;
   }
-}
-
-@media screen and (max-width: 700px) {
   .captive-page__text{
-    padding-left: 5%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
 
+/* @media screen and (max-width: 700px) {
+  .container__captive-page {
+    width: 524px;
+  }
+  .captive-page__text{
+    padding-left: 10px;
+  }
+}
+
+@media screen and (max-width: 539px) {
+  .captive-page__colums{
+    grid-template-columns: 158px auto;
+  }
+  .container__captive-page {
+    width: 444px;
+  }
+  .captive-page__text{
+    padding-left: 5px;
+  }
+} */
+
 @media screen and (max-width: 413px) {
+  .captive-page__logo {
+    text-align: left;
+  }
   .container__captive-page {
     width: 100%;
-    height: 944px;
     margin: 0;
     border-radius: 0px;
   }
@@ -252,7 +273,7 @@ body{
     padding: 0 48px;
   }
   .wrapper__text, .text__buttons, .input-form__col input{
-    max-width: 100%;
+    /* max-width: 100%; */
   }
   .text__buttons input{
     letter-spacing: 0.5px;
@@ -309,14 +330,6 @@ h1 {
   line-height: 20px;
   align-self: center;
 }
- 
-/* .confederacy {
-  display: grid;
-  grid-template-columns: 320px auto;
-  column-gap: 24px;
-  align-items: stretch;
-  height: 834px;
-} */
 
 .wrapper__privacy-policy p{
   color: #000;
@@ -349,6 +362,7 @@ h1 {
   }
   .captive-page__colums{
     grid-template-columns: 294px auto;
+    height: 100%;
   }
   .privacy__content{
     max-width: 95%;
@@ -361,14 +375,33 @@ h1 {
   }
   .captive-page__colums{
     grid-template-columns: 208px auto;
-    height: 835px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .container__captive-page {
+    width: 524px;
+  }
+  .captive-page__text{
+    /* padding-left: 10px; */
+  }
+}
+
+@media screen and (max-width: 539px) {
+  .captive-page__colums{
+    grid-template-columns: 158px auto;
+  }
+  .container__captive-page {
+    width: 444px;
+  }
+  .captive-page__text{
+    /* padding-left: 5px; */
   }
 }
 
 @media screen and (max-width: 413px) {
   .container__captive-page {
     width: 100%;
-    height: 1000px;
     margin: 0;
     border-radius: 0px;
   }
@@ -481,7 +514,7 @@ h3 {
 @media screen and (max-width: 413px) {
   .container__captive-page {
     width: 100%;
-    height: 1000px;
+    /* height: 1000px; */
     margin: 0;
     border-radius: 0px;
   }
@@ -564,7 +597,6 @@ h1 {
 @media screen and (max-width: 413px) {
   .container__captive-page {
     width: 100%;
-    height: 1000px;
     margin: 0;
     border-radius: 0px;
   }
