--- a/f/c/captive-page.css
+++ b/f/c/captive-page.css
@@ -103,7 +103,7 @@
   font-weight: 400;
   opacity: 0.6;
   line-height: 22px;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 /* медиа запросы для формы авторизации*/
@@ -174,6 +174,13 @@
   .language{
     left: 0px;
   }
+  .available{
+    max-width: 100%;
+  }
+  .text__register{
+    max-width: 100%;
+  }
+
 }
 
 @media screen and (max-width: 413px) {
